Added favicon to the website

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="./assets/css/arrow.css">
     <link rel="stylesheet" href="./assets/css/projects.css">
 
+    <link rel="icon" href="./assets/icons/icon2.svg" type="image/svg">
+
+
 
 </head>
 <body>
