--- a/assets/proyectos/cinemanager.html
+++ b/assets/proyectos/cinemanager.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/project-detail.css"> 
     <link rel="stylesheet" href="/assets/css/base.css"> 
+
+    <link rel="icon" href="/assets/icons/icon2.svg" type="image/svg">
+
 </head>
 <body>
     <canvas id="neuralCanvas"></canvas>
