Added CV to the website

--- a/index.html
+++ b/index.html
@@ -51,17 +51,13 @@
         <div class="about-container">
             <p>
                 Estudiante de 4to año de Ingeniería en Sistemas en la Universidad Abierta Interamericana (UAI), con título intermedio de Analista en Sistemas.
-                Tengo experiencia en desarrollo de software, bases de datos, utilizando herramientas como C#, Entity Framework, y SQL.
+                Cuento con experiencia en desarrollo de software utilizando .NET, enfocándome en aplicaciones de escritorio y desarrollo web. Poseo una base sólida en SQL y conocimientos avanzados en Entity Framework. Además, manejo HTML, CSS y tengo experiencia básica con JavaScript. También tengo conocimientos en Python, lo que me permite abordar proyectos diversos y versátiles.
             </p>
         </div>
 
-        <!-- Sección de habilidades -->
-        <h3>Skills</h3>
-        <div class="skills-container">
-            <div class="skill-card">C#</div>
-            <div class="skill-card">HTML</div>
-            <div class="skill-card">CSS</div>
-            <div class="skill-card">SQL</div>
+        <div class="info-item">
+            <img src="./assets/icons/redirect.png" alt="CV" class="icon">
+            <span><a href="https://drive.google.com/file/d/1jpHYAxdkKMgIChiacN62DvZpySMaeiNq/view" target="_blank" rel="noopener noreferrer">Mi CV</a></span>
         </div>
     </section>
 
@@ -103,6 +99,11 @@
         <div class="info-item">
             <img src="./assets/icons/instagram.png" alt="Instagram" class="icon">
             <span><a href="https://www.instagram.com/bautimarinelli" target="_blank" rel="noopener noreferrer">@bautimarinelli</a></span>
+        </div>
+
+        <div class="info-item">
+            <img src="./assets/icons/github.png" alt="GitHub" class="icon">
+            <span><a href="https://github.com/bautimarinellis-gh" target="_blank" rel="noopener noreferrer">bautimarinellis-gh</a></span>
         </div>
     </div>
 </section>
