--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
         <h2>Sobre mí</h2>
         <div class="about-container">
             <p>
-                Estudiante de 4to año de Ingeniería en Sistemas en la Universidad Abierta Interamericana (UAI), con título intermedio de Analista en Sistemas.
-                Cuento con experiencia en desarrollo de software utilizando .NET, enfocándome en aplicaciones de escritorio y desarrollo web. Poseo una base sólida en SQL y conocimientos avanzados en Entity Framework. Además, manejo HTML, CSS y tengo experiencia básica con JavaScript. También tengo conocimientos en Python, lo que me permite abordar proyectos diversos y versátiles.
+                Soy estudiante de cuarto año de Ingeniería en Sistemas en la Universidad Abierta Interamericana (UAI), con título intermedio de Analista en Sistemas. 
+                Me especializo en desarrollo de software utilizando .NET, enfocándome en aplicaciones de escritorio y desarrollo web. Poseo una sólida base en SQL y NoSQL, 
+                conocimientos avanzados en Entity Framework y experiencia en el desarrollo de APIs REST.
+                Además, tengo conocimientos en HTML, CSS y experiencia básica con JavaScript. También he trabajado con extracción y procesamiento de datos utilizando Python, integrando información en herramientas de visualización como Power BI. Estoy comprometido con el aprendizaje continuo y la aplicación de mis habilidades en proyectos versátiles y técnicamente desafiantes.
             </p>
         </div>
 
         <div class="info-item">
             <img src="./assets/icons/redirect.png" alt="CV" class="icon">
-            <span><a href="https://drive.google.com/file/d/1jpHYAxdkKMgIChiacN62DvZpySMaeiNq/view" target="_blank" rel="noopener noreferrer">Mi CV</a></span>
+            <span><a href="https://drive.google.com/file/d/1wDcI5j8GpGqPwqgru69_1t630pal9uPi/view?usp=sharing" target="_blank" rel="noopener noreferrer">Mi CV</a></span>
         </div>
     </section>
 
@@ -100,6 +102,11 @@
         <div class="info-item">
             <img src="./assets/icons/github.png" alt="GitHub" class="icon">
             <span><a href="https://github.com/bautimarinellis-gh" target="_blank" rel="noopener noreferrer">bautimarinellis-gh</a></span>
+        </div>
+
+        <div class="info-item">
+            <img src="./assets/icons/linkedin.png.png" alt="LinkedIn" class="icon">
+            <span><a href="https://www.linkedin.com/in/bautistamarinelliscaglia/" target="_blank" rel="noopener noreferrer">LinkedIn</a></span>
         </div>
     </div>
 </section>
